crates/parser/src/tests/snapshots/kcl_parser__tests__expr__subscript_expr_8.snap
---
source: crates/parser/src/tests/expr.rs
expression: "$crate :: tests :: parsing_expr_string(r####\"a[1::]\"####)"
---
Node {
    node: Subscript(
        Subscript {
            value: Node {
                node: Identifier(
                    Identifier {
                        names: [
                            Node {
                                node: "a",
                                filename: "",
                                line: 1,
                                column: 0,
                                end_line: 1,
                                end_column: 1,
                            },
                        ],
                        pkgpath: "",
                        ctx: Load,
                    },
                ),
                filename: "",
                line: 1,
                column: 0,
                end_line: 1,
                end_column: 1,
            },
            index: None,
            lower: Some(
                Node {
                    node: NumberLit(
                        NumberLit {
                            binary_suffix: None,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                    filename: "",
                    line: 1,
                    column: 2,
                    end_line: 1,
                    end_column: 3,
                },
            ),
            upper: None,
            step: None,
            ctx: Load,
            has_question: false,
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 6,
}
